Finalizado telas de redefinição de senha, estilizado tela de historico de Status, estilizado estados na home, ajuste pra quando não trazer nada na tela de busca, ajuste no block title das telas, ajustes em todas as telas pra deixar no padrão

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -65,9 +65,25 @@ html, body {
    text-decoration: none;
 }
 
+section.box-shadow {
+   border-radius: 20px;
+}
+
+.estado-atalho {
+   color: black;
+   margin-right: 20px;
+   font-weight: 500;
+}
+
 /* Home */
 
 .aumentar-tamanho-mouse a {
+   color: black;
+   text-decoration: none;
+   cursor: pointer;
+}
+
+.aumentar-tamanho-mouse p {
    color: black;
    text-decoration: none;
    cursor: pointer;
