--- a/templates/chat/meus-chats.html
+++ b/templates/chat/meus-chats.html
@@ -1,17 +1,17 @@
 {%  extends 'base.html'%}
 {% load static %}
-{% block title %} Chat Home{% endblock %}
+{% block title %} Meus Chats {% endblock %}
 
 {% block main %}
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center">
         <h1 class="display-4 text-primary">Meus Chats</h1>
         <span class="h6">Aqui você encontra todas as conversas</span>
     </div>
 
-    <div class="row">
+    <div class="row mb-5">
 
         <div class="col-12 mt-5">
 
