--- a/templates/home/termosdeuso.html
+++ b/templates/home/termosdeuso.html
@@ -4,11 +4,13 @@
 
 {% block main %}
 
-<div class="container">
+<section class="container box-shadow mb-5 pt-5 pb-3">
+
   <div class="text-center">
-    <h1 class="display-4 text-primary mb-2">Termos de Uso</h1>
+      <h1 class="display-4 text-primary">Termos e Condições de Uso</h1>
+      <span class="h6">Nosso termo e condições de uso</span>
   </div>
-  <div class="row box-shadow px-3 py-5" style="color: rgb(74, 74, 74)">
+  <div class="row px-3 py-5" style="color: rgb(74, 74, 74)">
 
     <p>
       Se você está aqui é porque você quer saber mais sobre as obrigações e direitos que lhe correspondem como um
@@ -302,8 +304,8 @@
     </p>
 
   </div>
-</div>
 
+</section>
 
 
 {% endblock %}
