--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -1,10 +1,10 @@
 {%  extends 'base.html'%}
 {% load static %}
-{% block title %} Notificações {% endblock %}
+{% block title %} Minhas Notificações {% endblock %}
 
 {% block main %}
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary">Notificações</h1>
@@ -20,7 +20,7 @@
     {% endif %}
 
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
 
 
 
