--- a/templates/products/products-detail.html
+++ b/templates/products/products-detail.html
@@ -1,7 +1,7 @@
 {%  extends 'base.html'%}
 {% load static %}
 
-{% block title %} Lista de Produtos {% endblock %}
+{% block title %} Detalhe do Produto {% endblock %}
 
 {% block main %}
 
