--- a/templates/products/products_favourite_list.html
+++ b/templates/products/products_favourite_list.html
@@ -10,7 +10,7 @@
         <h1 class="display-4 text-primary">Meus Favoritos</h1>
         <span class="h6">Meus produtos favoritados</span>
     </div>
-    <div class="row">
+    <div class="row mb-5">
         <div class="col" id="produtos" data-children="produto">
 
             <div class="produto py-2 col-12">
