--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load bootstrap %}
 
-{% block title %} Pagina de login {% endblock %}
+{% block title %} Login {% endblock %}
 
 {% block main %}
 
