--- a/templates/user/avaliacoesPendentes.html
+++ b/templates/user/avaliacoesPendentes.html
@@ -16,14 +16,14 @@
     {% endfor %}
 </div>
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary">Avaliações Pendentes</h1>
         <span class="h6">Avalie os usuários em que fez acordos</span>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
         <div class="col-9">
             {% for avaliacao in avaliacoes %}
             <a href="{% url 'avalia' avaliacao.id %}" class="link-sem-cor-azul-sem-traco">
