--- a/templates/user/avaliacoesUsuario.html
+++ b/templates/user/avaliacoesUsuario.html
@@ -12,7 +12,7 @@
   }
 </style>
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
   <div class="text-center mb-5">
     <h1 class="display-4 text-primary">Avaliações do Usuário</h1>
