--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -1,11 +1,46 @@
+
+{%  extends 'base.html'%}
+{% load static %}
+{% load bootstrap %}
 {% block title %}
-Password reset
+Confirmação de Email
 {% endblock %}
-{% block content %}
 
-<h1>Password set</h1>
+{% block main %}
 
-<p>Your password has been set. You can 
-    <a href="/" >log in now</a>
-</p>
+<section class="container logar-cadastrar-distanciamento">
+	<div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+		<div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
+			<div class="text-center">
+				<div class="mb-2">
+					<img src="{% static 'images/alugoicone60x60.png' %}" alt="">
+				</div>
+				<h3>Senha atualizada</h3>
+      </div>
+      
+			<div class="my-5">
+        <h5>Sua senha foi alterada com sucesso, logue na sua conta utilizando sua nova senha!</h5>
+      </div>
+
+			<div class="mt-4" style="border-top: 1px solid rgba(0, 0, 0, .2);">
+				<div class="mt-4 d-flex justify-content-around">
+					<h6 class="">Não tem uma conta?</h6>
+					<h6>Já tem uma conta?</h6>
+				</div>
+				<div class="d-flex justify-content-around">
+					<a href="{% url 'cadastro' %}">Cadastre-se</a>
+					<a href="{% url 'login' %}"> Login </a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row justify-content-center mt-3">
+		<div class="col-12 col-lg-6 text-center">
+			<span style="font-size: 13px; color: #A9A9A9; font-weight: normal;">
+				Ao continuar, você concorda com os Termos de Uso e a Política de Privacidade da Alugo.
+			</span>
+		</div>
+	</div>
+</section>
+
 {% endblock %}
