--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -1,21 +1,95 @@
+{%  extends 'base.html'%}
+{% load static %}
+{% load bootstrap %}
 {% block title %}
-Reset your password
+Confirmação de Email
 {% endblock %}
-{% block content %}
-<h1>Reset your password</h1>
+
+{% block main %}
+
+
+
+
+
+
+
 {% if validlink %}
-<p>Please enter your new password twice:</p>
-<form action="." method="post">
-    {{ form.as_p }}
-    
-    {% csrf_token %}
-    <p>
-        <input type="submit" value="Change my password" />
-    </p>
-</form>
+<section class="container logar-cadastrar-distanciamento">
+    <div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+        <div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
+            <div class="text-center">
+                <div class="mb-2">
+                    <img src="{% static 'images/alugoicone60x60.png' %}" alt="">
+                </div>
+                
+                <h3 class="mb-4">Redefinição de senha</h3>
+            </div>
+            <form action="." method="post">
+                {{ form|bootstrap }}
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary botao-redondo btn-block">Alterar Senha</button>
+            </form>
+            
 
-Then : {% else %}<p>The password reset link was invalid, possibly because it hasalready been used. Please request a new password reset.</p>
+            <div class="mt-4" style="border-top: 1px solid rgba(0, 0, 0, .2);">
+                <div class="mt-4 d-flex justify-content-around">
+                    <h6 class="">Não tem uma conta?</h6>
+                    <h6>Já tem uma conta?</h6>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <a href="{% url 'cadastro' %}">Cadastre-se</a>
+                    <a href="{% url 'login' %}"> Login </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+        <div class="col-12 col-lg-6 text-center">
+            <span style="font-size: 13px; color: #A9A9A9; font-weight: normal;">
+                Ao continuar, você concorda com os Termos de Uso e a Política de Privacidade da Alugo.
+            </span>
+        </div>
+    </div>
+</section>
 
+{% else %}
+
+<section class="container logar-cadastrar-distanciamento">
+    <div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+        <div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
+            <div class="text-center">
+                <div class="mb-2">
+                    <img src="{% static 'images/alugoicone60x60.png' %}" alt="">
+                </div>
+                <h3 class="mb-4">Link de redefinição expirado</h3>
+            </div>
+            
+            <h5>O link utilizado para redefinição de senha é inválido, possivelmente porque já foi utilizado. Por favor, solicite novamente o link para redefinição de senha por e-mail.</h5>
+
+            <div class="text-right mt-3">
+                <a href="{% url 'password_reset' %}">Solicitar Novo Link</a>
+              </div>
+
+            <div class="mt-4" style="border-top: 1px solid rgba(0, 0, 0, .2);">
+                <div class="mt-4 d-flex justify-content-around">
+                    <h6 class="">Não tem uma conta?</h6>
+                    <h6>Já tem uma conta?</h6>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <a href="{% url 'cadastro' %}">Cadastre-se</a>
+                    <a href="{% url 'login' %}"> Login </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-center mt-3">
+        <div class="col-12 col-lg-6 text-center">
+            <span style="font-size: 13px; color: #A9A9A9; font-weight: normal;">
+                Ao continuar, você concorda com os Termos de Uso e a Política de Privacidade da Alugo.
+            </span>
+        </div>
+    </div>
+</section>
 
 {% endif %}
 {% endblock %}
