--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -15,7 +15,7 @@ Confirmação de Email
 				<div class="mb-2">
 					<img src="{% static 'images/alugoicone60x60.png' %}" alt="">
 				</div>
-				<h3>Email de redefinição de senha</h3>
+				<h3>E-mail de redefinição de senha</h3>
       </div>
       
 			<div class="my-5">
