--- a/templates/pesquisa/pesquisa.html
+++ b/templates/pesquisa/pesquisa.html
@@ -110,6 +110,8 @@
         <div class="d-md-none d-block col-12 mt-4 mb-5">
 
             <span class="input-group-append">
+                <input type="text" maxlength="100" value="{{nome}}" class="form-control pesquisa-mobile" name="nome"
+                        id="nomePesquisaMobile">
                 <button type="submit" class="btn btn-primary py-0 px-3">
                     <img src="{% static 'images/icone-lupa.png' %}" style="width: 30px;" alt="icone lupa">
                 </button>
@@ -117,7 +119,7 @@
         </div>
 
         </form>
-        
+
         <div class="row col-lg-7 col">
 
             {% for product in products %}
@@ -132,11 +134,15 @@
                         <div class="row col-lg-9 col-8 col-sm-4">
                             <p class="col-lg-9 col-4 texto-item-nome align-content-md-between">{{ product.nome }}</p>
 
-                            <p class="col-lg-3 col-12" style="font-size: 20px; font-weight: 700;">R$ {{ product.preco }}</p>
+                            <p class="col-lg-3 col-12" style="font-size: 20px; font-weight: 700;">R$ {{ product.preco }}
+                            </p>
 
-                            <p class="col-lg-9 col-12 align-self-md-end" style="font-size: 15px; font-weight: 500;">{{ product.estado }}<span>, {{ product.cidade }}</span></p>
+                            <p class="col-lg-9 col-12 align-self-md-end" style="font-size: 15px; font-weight: 500;">
+                                {{ product.estado }}<span>, {{ product.cidade }}</span></p>
 
-                            <p class="col-lg-3 col-12 align-self-md-end" style="font-size: 15px; color:rgb(153, 153, 153); font-weight: 500;">{{ product.date }}</p>
+                            <p class="col-lg-3 col-12 align-self-md-end"
+                                style="font-size: 15px; color:rgb(153, 153, 153); font-weight: 500;">{{ product.date }}
+                            </p>
                         </div>
 
 
@@ -145,12 +151,20 @@
 
 
             </div>
+
+            {% empty %}
+            <div class="row col-9 ml-5 justify-content-center">
+                <div class="text-center">
+                    <img src="{% static 'images/sem-produto-icone.png' %}" style="width: 200px; height: 200px;" alt="">
+                    <h4 class="mt-4">Ops! Nenhum anúncio foi encontrado!</h4>
+                </div>
+            </div>
             {% endfor %}
 
         </div>
     </div>
 
-    <div class="row mt-3 justify-content-center">
+    <div class="row mt-5 mr-4 mr-md-0 justify-content-center">
         <div>
             {% include 'pesquisa/pagination.html' with page=products %}
         </div>
@@ -160,6 +174,7 @@
 
 <script language="JavaScript" type="text/javascript" charset="utf-8">
     document.getElementById("nomePesquisa").placeholder = 'Estou procurando por...';
+    document.getElementById("nomePesquisaMobile").placeholder = 'Estou procurando por...';
 
     if (document.getElementById("categoriaSelecionada").value == 'Ferramentas') {
         document.getElementById('divFerramentas').style.borderStyle = 'inset';
