--- a/templates/products/alugar.html
+++ b/templates/products/alugar.html
@@ -3,10 +3,10 @@
 {%  load bootstrap %}
 {% load static %}
 
-{% block title %} Alugar {% endblock %}
+{% block title %} Alugar Produto {% endblock %}
 
 {% block main %}
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary">Solicitação de Aluguel</h1>
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="mt-4">
-                        <button type="submit" style="border-radius: 30px;" class="btn btn-block btn-primary py-2">Próximo Passo</button>
+                        <button type="submit" style="border-radius: 30px; font-weight: 500;" class="btn btn-block btn-primary py-2">Próximo Passo</button>
                     </div>
                 </div>
 
