--- a/templates/products/denuncia.html
+++ b/templates/products/denuncia.html
@@ -18,14 +18,14 @@
     {% endfor %}
 </div>
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary">Denunciar</h1>
         <span class="h6">Acha que algo está fora do normal? Conte pra nós!</span>
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
 
         <div class="col-7" style="color: black; font-weight: 600;">
             <form method="POST" enctype="multipart/form-data">
