--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -4,13 +4,13 @@
 
 {% block main %}
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
     <div class="text-center mb-5">
         <h1 class="display-4 text-primary">Propostas</h1>
         <span class="h6">Aqui você encontra todas as suas propostas</span>
     </div>
-    <div class="row justify-content-center mb-5">
+    <div class="row justify-content-center">
 
         <div class="col-12">
 
@@ -48,7 +48,7 @@
 
     </div>
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-5">
 
         <div class="col-12 mt-5">
 
