--- a/templates/user/avaliar.html
+++ b/templates/user/avaliar.html
@@ -12,7 +12,7 @@
 {% block main %}
 
 
-<section class="container box-shadow p-3 pb-5">
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
   <div class="text-center mb-5">
     <h1 class="display-4 text-primary">Avalie o Usuário</h1>
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="row justify-content-md-end justify-content-center">
+  <div class="row justify-content-md-end justify-content-center mb-5">
 
     <div class="mt-4 mr-md-5">
       <button class="btn btn-primary px-5 btn-lg botao-redondo">Enviar Avaliação</button>
