--- a/templates/user/historicoStatus.html
+++ b/templates/user/historicoStatus.html
@@ -1,16 +1,25 @@
 {%  extends 'base.html'%}
 
-{% block title %} PHistórico Status Aluguel {% endblock %}
+{% block title %} Histórico Status Aluguel {% endblock %}
 
 {% block main %}
-<div class="container">
 
+<section class="container box-shadow mb-5 pt-5 pb-3">
 
-    <div class="row">
+    <div class="text-center mb-5">
+        <h1 class="display-4 text-primary">Histórico de Status de Aluguéis</h1>
+        <span class="h6">Status em tempo real do seu aluguel</span>
+    </div>
+
+    <div class="row mb-5" style="color: black; font-weight: 500;">
         {% for historico in historicos %}
         <div class="col-md-3 col-6 mb-4">
-            <ul class="list-group">
-                <li class="list-group-item">Produto: {{historico.produto}}</li>
+            <ul class="list-group text-center" style="border-radius: 20px;">
+                <li class="list-group-item">
+                    <image style="width: 110px; height: 80px;" class="rounded"
+                        src="{{ historico.produto.get_photo_url }}" />
+                </li>
+                <li class="list-group-item">{{historico.produto}}</li>
                 <li class="list-group-item">Locador: {{historico.locador}}</li>
 
                 {% if historico.status == 1 %}
@@ -43,19 +52,29 @@
                     </div>
                 </li>
                 {% endif %}
-                <li class="list-group-item">Data: {{historico.date}}</li>
+                <li class="list-group-item" style="font-size: 14px;">{{historico.date}}</li>
 
             </ul>
         </div>
 
         {% empty %}
-        <h4>Você não tem nenhum produto alugado!</h4>
-
+        <div class="col-12 text-center">
+            <h4>Você não tem nenhum produto alugado!</h4>
+            <img src="" alt="">
+        </div>
         {% endfor %}
 
-
     </div>
-</div>
+
+
+
+</section>
+
+
+
+
+
+
+
 
 {% endblock %}
-
