--- a/templates/user/perfil.html
+++ b/templates/user/perfil.html
@@ -7,123 +7,120 @@
 {% block main %}
 
 <body>
-    <br>
-    <div class="container" style="margin-top: 51px; margin-bottom: 70px;">
-
-        <div>
-            {% if alterar != None %}
-            {% for message in messages %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            {% endfor %}
-            {% endif %}
+    <div>
+        {% if alterar != None %}
+        {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
 
-        <div>
-            {% if excluir != None %}
-            {% for message in messages %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
+        {% endfor %}
+        {% endif %}
+    </div>
 
-            {% endfor %}
-            {% endif %}
+    <div>
+        {% if excluir != None %}
+        {% for message in messages %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
 
-        <section class="container box-shadow">
+        {% endfor %}
+        {% endif %}
+    </div>
 
-            <div class="text-center">
-                <h1 class="display-4 text-primary">Perfil do Usuário</h1>
-                <span class="h6">Configure o seu cadastro</span>
+    <section class="container box-shadow mb-5 pt-5 pb-3">
+
+        <div class="text-center">
+            <h1 class="display-4 text-primary">Perfil do Usuário</h1>
+            <span class="h6">Configure o seu cadastro</span>
+        </div>
+
+        <div class="row mt-5 justify-content-center">
+
+            <div class="col-12 text-center">
+                <image src="{{ perfil.get_photo_url }}" class="img-thumbnail fotoPerfil"> </image>
             </div>
 
-            <div class="row mt-5 justify-content-center">
-
-                <div class="col-12 text-center">
-                    <image src="{{ perfil.get_photo_url }}" class="img-thumbnail fotoPerfil"> </image>
+            <div class="bg-white p-5 col-12 col-lg-7 mb-5"
+                style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
+                <div>
+                    <h3 class="h4">Dados da Conta</h3>
                 </div>
 
-                <div class="bg-white p-5 col-12 col-lg-7 mb-5"
-                    style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
-                    <div>
-                        <h3 class="h4">Dados da Conta</h3>
-                    </div>
+                <div class="mt-4">
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{ form|bootstrap }}
+                        <div class="mt-4">
+                            <button type="submit" id="btnSalvar" class="btn btn-block btn-primary py-2 botao-redondo">
+                                Salvar Alterações</button>
+                        </div>
+                    </form>
+                </div>
 
-                    <div class="mt-4">
-                        <form method="POST" enctype="multipart/form-data">
+                </form>
+            </div>
+
+            <div class="bg-white p-5 col-12 col-lg-7 mb-5"
+                style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
+                <div class="d-flex justify-content-between text-center">
+                    <h3 class="h4"><img src="{% static 'images/icone-excluir-conta.ico' %}"
+                            style="width: 25px; padding-bottom: 4px;" alt="icone excluir">
+                        Excluir minha conta</h3>
+                    <a data-toggle="collapse" href="#excluirConta" role="button" aria-expanded="false"
+                        aria-controls="excluirMinhaConta" href="#">Excluir conta</a>
+                </div>
+
+                <div>
+                    <span style="font-weight: normal; font-size: 13px; color: #A9A9A9;"><strong>Atenção:</strong>
+                        todos os
+                        seus
+                        anúncios serão excluídos. Esta ação não poderá ser desfeita!</span>
+
+                </div>
+
+                <div class="collapse mt-4 text-center" id="excluirConta">
+                    <div>
+                        <p class="mr-2">Insira a sua senha</p>
+                        <form method="POST" action="submit" enctype="multipart/form-data">
                             {% csrf_token %}
-                            {{ form|bootstrap }}
-                            <div class="mt-4">
-                                <button type="submit" id="btnSalvar"
-                                    class="btn btn-block btn-primary py-2 botao-redondo"> Salvar Alterações</button>
+                            <div class="d-flex justify-content-center">
+                                <span><img style="width: 40px;" class="mr-2"
+                                        src="{% static 'images/seta-excluir-conta.png' %}" alt=""></span>
+                                <input type="password" class="form-control w-50 mr-5" id="senha" name="senha" />
                             </div>
+
+                            <div class="mt-3">
+
+                                <div class="col-12 mt-4">
+                                    <button type="submit" class="btn btn-danger botao-redondo btn-block py-2">Excluir
+                                        Conta</button>
+                                </div>
+                            </div>
+
                         </form>
                     </div>
-
-                    </form>
                 </div>
 
-                <div class="bg-white p-5 col-12 col-lg-7 mb-5"
-                    style="border-radius: 20px; color: rgb(74, 74, 74); font-weight: bold;">
-                    <div class="d-flex justify-content-between text-center">
-                        <h3 class="h4"><img src="{% static 'images/icone-excluir-conta.ico' %}"
-                                style="width: 25px; padding-bottom: 4px;" alt="icone excluir">
-                            Excluir minha conta</h3>
-                        <a data-toggle="collapse" href="#excluirConta" role="button" aria-expanded="false"
-                            aria-controls="excluirMinhaConta" href="#">Excluir conta</a>
-                    </div>
-
-                    <div>
-                        <span style="font-weight: normal; font-size: 13px; color: #A9A9A9;"><strong>Atenção:</strong>
-                            todos os
-                            seus
-                            anúncios serão excluídos. Esta ação não poderá ser desfeita!</span>
-
-                    </div>
-
-                    <div class="collapse mt-4 text-center" id="excluirConta">
-                        <div>
-                            <p class="mr-2">Insira a sua senha</p>
-                            <form method="POST" action="submit" enctype="multipart/form-data">
-                                {% csrf_token %}
-                                <div class="d-flex justify-content-center">
-                                    <span><img style="width: 40px;" class="mr-2" src="{% static 'images/seta-excluir-conta.png' %}" alt=""></span>
-                                    <input type="password" class="form-control w-50 mr-5" id="senha" name="senha" />
-                                </div>
-
-                                <div class="mt-3">
-
-                                    <div class="col-12 mt-4">
-                                        <button type="submit"
-                                            class="btn btn-danger botao-redondo btn-block py-2">Excluir Conta</button>
-                                    </div>
-                                </div>
-
-                            </form>
-                        </div>
-                    </div>
 
 
 
 
-
-                    </form>
-                </div>
-
+                </form>
             </div>
 
+        </div>
 
 
 
-    </div>
+    </section>
 
 </body>
 {% endblock %}
