retorno de notificaçoes da mais atual para antiga e melhorado template de exportar conversa

--- a/templates/chat/chat2.html
+++ b/templates/chat/chat2.html
@@ -6,7 +6,7 @@
 </head> 
 <body> 
 
-    <p>{{title}}</p><br>
-    <p>{{mensagems}}<br></p><br>
+    <p>Conversa Exportada!</p><br>
+    <p>{{mensagems| linebreaks}}<br></p><br>
 </body>
 </hmtl>
