--- a/templates/products/produtosRequisitados.html
+++ b/templates/products/produtosRequisitados.html
@@ -32,7 +32,7 @@
                     </div>
 
                     <div class="col-md-5 col-12 mt-md-0 mt-4">
-                        <p> {{ alugado.produto.nome }} </p>
+                        <p data-toggle="tooltip" data-placement="bottom" title="{{ alugado.produto.nome }}" class="reticencias"> {{ alugado.produto.nome }} </p>
                     </div>
 
             </li>
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="col-md-5 col-12 mt-md-0 mt-4">
-                        <p> {{ proposta.produto.nome }} </p>
+                        <p data-toggle="tooltip" data-placement="bottom" title="{{ proposta.produto.nome }}" class="reticencias"> {{ proposta.produto.nome }} </p>
                     </div>
 
 
