--- a/templates/user/avaliacoesPendentes.html
+++ b/templates/user/avaliacoesPendentes.html
@@ -38,7 +38,7 @@
                             </div>
 
                             <div class="col-md-3 col-12">
-                                <h6>{{ avaliacao.produto }}</h6>
+                                <h6 data-toggle="tooltip" data-placement="bottom" title="{{ avaliacao.produto }}" class="reticencias">{{ avaliacao.produto }}</h6>
                             </div>
 
                             <div class="col-md-1 col-12">
