--- a/templates/chat/meus-chats.html
+++ b/templates/chat/meus-chats.html
@@ -55,7 +55,7 @@
 
                         <div class="col-md-3 col-12">
                             <a class="link-produto-chat" href="{% url 'detail_product' chat.produto.id %}">
-                                <h6>{{ chat.produto.nome }}</h6>
+                                <h6 data-toggle="tooltip" data-placement="bottom" title="{{ chat.produto.nome }}" class="reticencias">{{ chat.produto.nome }}</h6>
                             </a>
                         </div>
 
