--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -33,7 +33,7 @@
                 {% if notification.notification_type == 1 %}
                 <div class="row justify-content-between align-items-center">
                     <img style="width: 30px;" src="{% static 'images/mensagem-icone.ico' %}" alt="">
-                    <h6>{{notification.message}}</h6>
+                    <h6 data-toggle="tooltip" data-placement="bottom" title="{{ notification.message }}" class="reticencias">{{notification.message}}</h6>
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
                 </div>
