--- a/templates/pesquisa/pesquisa.html
+++ b/templates/pesquisa/pesquisa.html
@@ -123,7 +123,7 @@
         <div class="row col-lg-7 col">
 
             {% for product in products %}
-            <div class="col-12 mb-1" style="border-bottom: 1px solid #DADADA; ">
+            <div class="col-12 mb-1" style="border-bottom: 1px solid #DADADA;">
 
                 <a class="texto-item" href="{% url 'detail_product' product.id %}">
 
@@ -131,8 +131,8 @@
 
                         <image src="{{ product.get_photo_url }}" class="rounded tamanho-imagens-pesquisa"> </image>
 
-                        <div class="row col-lg-9 col-8 col-sm-4">
-                            <p class="col-lg-9 col-4 texto-item-nome align-content-md-between">{{ product.nome }}</p>
+                        <div class="row col-lg-9 col-8 col-sm-7">
+                            <p data-toggle="tooltip" data-placement="bottom" title="{{ product.nome }}" class="col-lg-9 col-12 texto-item-nome align-content-md-between reticencias">{{ product.nome }}</p>
 
                             <p class="col-lg-3 col-12" style="font-size: 20px; font-weight: 700;">R$ {{ product.preco }}
                             </p>
